syntax = "proto3";

option java_package = "com.skiff.protobuf.grpc";
option java_outer_classname = "RpcRegistryGrpc";

import 'Result.proto';
import 'Registry.proto';

service RegistryService {
  rpc register (RegistryRequest) returns (Result);
}